More FindBugs fixes